--- a/instalacao-virtualbox.adoc
+++ b/instalacao-virtualbox.adoc
@@ -46,13 +46,13 @@ $ sudo /etc/init.d/vboxdrv setup
 * Informe o número da versão do VirtualBox que você está utilizando:
 [source,bash]
 ----
-$ VER=4.3.14
+$ VER=4.3.18
 ----
 * Baixe e instale:
 [source,bash]
 ----
 $ VEP=Oracle_VM_VirtualBox_Extension_Pack-$VER.vbox-extpack
 $ wget -c http://download.virtualbox.org/virtualbox/$VER/$VEP
-$ VBoxManage extpack install $VEP
+$ sudo VBoxManage extpack install $VEP
 ----
 
