--- a/instalacao-asciidoctor.asciidoc
+++ b/instalacao-asciidoctor.asciidoc
@@ -4,15 +4,51 @@
 :toc:
 :numbered:
 
-== Instalando
+== Instalando o RVM
 
+Baixar as chaves GPG:
+[source bash]
+----
+gpg --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3
+curl -sSL https://get.rvm.io | bash -s stable
+----
+
+[NOTE]
+====
+Se o firewall estiver bloqueando a porta 11371 (utilizada pelo comando ``gpg``), acrescentar ':80' a string ``hkp://keys.gnupg.net`` para que seja utilizada a porta 80. (Ref: http://unix.stackexchange.com/questions/75892/keyserver-timed-out-when-trying-to-add-a-gpg-public-key)
+====
+
+Carregar o arquivo ``~/.profile`` e executar o RVM para listar as versões de Ruby disponíveis:
 [source,bash]
 ----
-gpg --keyserver hkp://keys.gnupg.net --recv-keys D39DC0E3
-curl -sSL https://get.rvm.io | bash -s stable
 source ~/.profile
 rvm list known
-rvm install 2.2.0
+----
+
+== Instalando o Ruby
+
+Instalar uma das versões do Ruby que foram listadas. Exemplo:
+[source,bash]
+----
+rvm install 2.2
 ruby --version
+----
+
+== Instalando o Asciidoctor
+
+Instalar a ``gem`` asciidoctor:
+[source,bash]
+----
 gem install asciidoctor
 ----
+
+== Renderizando asciidoc no Chrome
+
+Instalar, no Chrome, o plugin https://chrome.google.com/webstore/detail/asciidoctorjs-live-previe/iaalpfgpbocpdfblpnhhgllgbdbchmia?hl=en[Asciidoctor.js Live Preview].
+
+Marcar a opção "Allow access to file URLs" em chrome://extensions para que o plugin funcione.
+
+[NOTE]
+====
+Se desejar saber que outros plugins eu tenho instalados no meu Google Chrome, veja https://gist.github.com/paulojeronimo/c7d89809c9bcfb48e3eb[esse link].
+====
